Fix text fade out issue on Safari

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -210,7 +210,15 @@
         height: 41px;
         width: 100%;
         top: 1px;
-        background-image: linear-gradient(to bottom, transparent, white);
+        /* background-image: linear-gradient(to bottom, transparent, $background-color); */
+        background: rgba(253,253,253,0);
+        background: -moz-linear-gradient(top, rgba(253,253,253,0) 0%, rgba(253,253,253,1) 100%);
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(253,253,253,0)), color-stop(100%, rgba(253,253,253,1)));
+        background: -webkit-linear-gradient(top, rgba(253,253,253,0) 0%, rgba(253,253,253,1) 100%);
+        background: -o-linear-gradient(top, rgba(253,253,253,0) 0%, rgba(253,253,253,1) 100%);
+        background: -ms-linear-gradient(top, rgba(253,253,253,0) 0%, rgba(253,253,253,1) 100%);
+        background: linear-gradient(to bottom, rgba(253,253,253,0) 0%, rgba(253,253,253,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#fdfdfd', GradientType=0 );
       }
       .less {
         display: none;
